--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vocab.gdict"
-    android:versionCode="17"
-    android:versionName="3.1" >
+    android:versionCode="18"
+    android:versionName="3.2" >
 
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -21,6 +21,9 @@
         <activity
             android:name="com.vocab.gdict.MainActivity"
             android:label="@string/app_name" >
+            <intent-filter android:label="@string/filter_title_view_dict">
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
